<resources>
    <string name="app_name">RecipesApp</string>
    <string name="title_home">Home</string>
    <string name="title_addrecipe">Add recipe</string>
    <string name="title_userprofile">Perfil</string>
    <string name="prefs_file">com.actrabajoequipo.recipesapp.PREFERENCE_FILE_KEY</string>
    <string name="userprofile_login">Debes hacer login para poder ver tu perfil o añadir tus propias recetas.</string>
    <string name="login_success">"LOGIN REALIZADO CORRECTAMENTE :)"</string>
    <string name="login_error">LOGIN INCORRECTO</string>
    <string name="login_error2">NO SE RECUPERÓ BIEN LA CUENTA</string>
    <string name="login_error3">"HUBO ALGÚN ERROR, INTÉNTALO DE NUEVO.</string>
    <string name="email_no_confirmed">Email no confirmado. Haz click en el enlace de confirmación que recibiste en tu correo."</string>
    <string name="email_or_password_failed">Email o contraseña incorrectos."</string>
    <string name="fill_in_the_fields">Rellena los dos campos, por favor."</string>
    <string name="fill_in_alls_fields">"Rellena todos los campos correctamente, por favor"</string>
    <string name="passwords_do_not_match">"Las contraseñas no coinciden."</string>
    <string name="password_requirement">Por favor, introduce una contraseña que contenga al menos 6 caracteres, una minúscula, una mayúscula y un número."</string>
    <string name="email_already_registered">Este correo electronico ya está registrado. Si aún no has verificado la cuenta haz click en el enlace que te enviamos.</string>
    <string name="confirm_your_email">Haz click en el enlace que hemos enviado a tu correo electrónico para completar tu registro.</string>
    <string name="ingredientes_title">Ingredientes</string>
    <string name="preparation_title">Preparación</string>
    <string name="subtitle_addrecipe">Comparte ese secreto culinario</string>
    <string name="btn_addrecipe">+ receta</string>
    <string name="description_addrecipe">Aporta esa receta familiar o tradicional de tu zona y enriquece la comunidad</string>
    <string name="ingredientes">Ej: 250 g de harina</string>
    <string name="add_ingredient">+ ingredientes</string>
    <string name="add_img_recipe">añadir foto receta</string>
    <string name="title_recipe">Título. Ej: Tortilla de patatas</string>
    <string name="steps_recipe">Pasos para la elaboración de la receta</string>
    <string name="form_add_recipe">Formulario nueva receta</string>
    <string name="btn_save">Publicar</string>
    <string name="tv_list_ingredients">Lista de ingredientes</string>
    <string name="tv_steps_recipe">Pasos</string>
    <string name="add_recipe_message_invalid">Revisa los campos requeridos</string>
    <string name="fields_required_empty">Revisa los campos requeridos</string>
    <string name="formRecipe_title_required">El título es un campo obligatorio</string>
    <string name="formRecipe_step_required">Es obligatorio poner una descripción de la receta</string>
    <string name="formRecipe_ingredients_required">Es obligatorio al menos introducir un nuevo ingrediente</string>

    <string name="image_not_selected">No has seleccionado ninguna imagen</string>
    <string name="connection_firebase_error">La conexión con firebase ha fallado</string>
    <string name="upload_image_error">Error al subir imagen, inténtelo de nuevo</string>
    <string name="upload_image_complete">Imagen subida correctamente</string>
    <string name="description_recipe">¿Cúal es la historia de tu receta, en quien te inspiraste, es especial para ti?</string>
    <string name="edit_username_confirmation_question">¿Estás seguro de que quieres cambiar tu username?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="informative_text_edit_email">Te enviaremos un mail a la nueva dirección y deberás verificarla</string>
    <string name="edit_email_confirmation_question">¿Estás seguro de que quieres cambiar tu direccion de correo? Al aceptar se cerrará tu sesión y tendás que entrar con la nueva dirección de correo tras haberla verificado. </string>
    <string name="error_message_edit_username">No se pudo actualizar el username. Inténtelo de nuevo.</string>
    <string name="message_edit_username_successfully">Username actualizado correctamente.</string>
    <string name="error_message_edit_email">No se pudo actualizar el correo. Inténtelo de nuevo.</string>
    <string name="message_edit_email_successfully">Verifica tu nueva dirección de correo para poder iniciar sesión en tu cuenta.</string>
    <string name="informative_text_edit_password">Te enviaremos un link a tu email para que modifiques tu password.</string>
    <string name="edit_password_confirmation_question">¿Estás seguro de que quieres cambiar tu password?</string>
    <string name="error_message_edit_password">No se pudo actualizar la password. Inténtelo de nuevo.</string>
    <string name="message_edit_password_successfully">Compueba tu correo. Debería haberte llegado un link para modificar tu password.</string>
    <string name="delete_user_confirmation_question">¿Estás seguro de que quieres eliminar tu cuenta?</string>
    <string name="error_message_delete_user">No se pudo eliminar la cuenta. Inténtelo de nuevo.</string>
    <string name="message_delete_user_successfully">La cuenta se eliminó con éxito.</string>
    <string name="search_title">Buscar</string>
    <string name="search_hint">Buscar</string>
    <string name="username">Username:</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="delete_account">Delete account</string>
    <string name="edit_password">Edit password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email_edittext">Email</string>
    <string name="username_edittext">Username</string>
    <string name="password_edittext">Password</string>
    <string name="log_in">Log in</string>
    <string name="log_in_google_account">Log in with your Google account</string>
    <string name="or">or</string>
    <string name="ok">Ok</string>
    <string name="not_have_an_account">Not have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="informative_text_forgot_password">Introduce tu dirección de correo electrónico. Te enviaremos un link para que modifiques tu password.</string>
    <string name="informative_text_username_for_google_account">Escoge tu nombre de usuario</string>
    <string name="informative_text_set_username_for_google_account_successfully">Nombre guardado con éxito.</string>
    <string name="error_message_set_username_for_google_account">No se pudo gaurdar su username. Inténtelo de nuevo.</string>
    <string name="title_confirm_signout">Cerrar la sesión</string>
    <string name="message_confirm_signout">¿Realmente desear cerrar la sesión?</string>
    <string name="detail_not_disponible">Receta no disponible. Prueba más tarde</string>
    <string name="choose_picture_method">Selecciona la foto de la galería o haz una foto con la cámara</string>
    <string name="sign_in_input_name">Name</string>
    <string name="sign_in_input_email">Email</string>
    <string name="sign_in_input_password">Password</string>
    <string name="sign_in_input_repeat_password">Password again</string>
    <string name="sign_in_button_sign_up">Sign up</string>
    <string name="profile_button_sign_up">Sign up</string>
    <string name="profile_button_login">Log in</string>
    <string name="profile_text_my_recipes">Mis recetas</string>
    <string name="profile_text_favorites">Favoritas</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_sign_out">Sign out</string>
    <string name="myRecipes_empty">Aún no tienes recetas creadas</string>
    <string name="myFavourites_empty">Aún no tienes recetas favoritas</string>
    <string name="info_options_google_account">Al estar logueado con una cuenta de google no podrás modificar ni email ni password.</string>
</resources>