<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/xxl_spacing">

            <ImageView
                android:id="@+id/photoRecipe"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/grey" />

            <Button
                android:id="@+id/btnAddRecipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_img_recipe" />

            <EditText
                android:id="@+id/etTitleRecipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:hint="@string/title_recipe"
                android:padding="@dimen/m_spacing" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/xxl_spacing"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_list_ingredients" />

            <EditText
                android:id="@+id/etIngredient1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/xs_spacing"
                android:background="@color/grey"
                android:hint="@string/ingredientes"
                android:padding="@dimen/m_spacing" />

            <EditText
                android:id="@+id/etIngredient2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/xs_spacing"
                android:background="@color/grey"
                android:hint="@string/ingredientes"
                android:padding="@dimen/m_spacing" />

            <EditText
                android:id="@+id/etIngredient3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/xs_spacing"
                android:background="@color/grey"
                android:hint="@string/ingredientes"
                android:padding="@dimen/m_spacing" />

            <EditText
                android:id="@+id/etIngredient4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/xs_spacing"
                android:background="@color/grey"
                android:hint="@string/ingredientes"
                android:padding="@dimen/m_spacing" />

            <EditText
                android:id="@+id/etIngredient5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/xs_spacing"
                android:background="@color/grey"
                android:hint="@string/ingredientes"
                android:padding="@dimen/m_spacing" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_ingredient" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/xxl_spacing"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_steps_recipe" />


            <EditText
                android:id="@+id/etStepForRecipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/xs_spacing"
                android:background="@color/grey"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/steps_recipe"
                android:inputType="textMultiLine"
                android:lines="5" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>

