<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.actrabajoequipo.recipesapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_detailActivity"
            app:destination="@id/detailActivity"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/slide_in"
            app:popExitAnim="@anim/slide_out" />
    </fragment>

    <fragment
        android:id="@+id/navigation_addrecipe"
        android:name="com.actrabajoequipo.recipesapp.ui.addrecipe.AddRecipeFragment"
        android:label="@string/title_addrecipe"
        tools:layout="@layout/fragment_addrecipe" />

    <fragment
        android:id="@+id/navigation_userprofile"
        android:name="com.actrabajoequipo.recipesapp.ui.userprofile.UserProfileFragment"
        android:label="@string/title_userprofile"
        tools:layout="@layout/fragment_userprofile" />

    <activity
        android:id="@+id/detailActivity"
        android:name="com.actrabajoequipo.recipesapp.ui.detail.DetailActivity"
        android:label="DetailActivity">
        <argument
            android:name="recipeId"
            app:argType="string" />
    </activity>

</navigation>