<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.forgotPassword.ForgotPasswordActivity">

    <TextView
        android:id="@+id/forgot_password_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/informative_text_forgot_password"/>

    <EditText
        android:id="@+id/recovery_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:hint="@string/email_edittext"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_info"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="10dp"
        android:background="@drawable/custom_edittext"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>

    <Button
        android:id="@+id/button_ok_email_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/recovery_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/ok"/>

</androidx.constraintlayout.widget.ConstraintLayout>